--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Week02 Day01</title>
+    <link rel="stylesheet" href="styles01.css">
+</head>
+    
+    <body>
+        <section>
+            <h1>Week02 Day01</h1>
+
+            <p>This is <strong>my</strong> paragraph. I'm using a <b>tag</b></p>
+            
+            <p> Hemingway wrote <cite>The Sun Also Rises</cite>. </p>
+        </section>
+    </body>
+</html>
