--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <body>
         <section>
-            <span><h1>Week02 Day01</h1></span>
+            <span id=foo><h1>Week02 Day01</h1></span>
 
             <p>This is <strong>my</strong> paragraph. I'm using a <b>tag</b></p>
             
