--- a/index.html
+++ b/index.html
@@ -17,4 +17,13 @@
             <p> Hemingway wrote <cite>The Sun Also Rises</cite>. </p>
         </section>
     </body>
+    <body>
+        <section>
+            <span id=boo><h1>Week03 Day01</h1></span>
+
+            <p>This is <strong>my</strong> paragraph. I'm using a <b>tag</b></p>
+            
+            <p> Hemingway wrote <cite>The Sun Also Rises</cite>. </p>
+        </section>
+    </body>
 </html>
