--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Toc</h1>
 
     <ul>
-        <li><a href="Week03-02.html">Week Three Day Two</a></li>
+        <li><a href="Week03-day02.html">Week Three Day Two</a></li>
         <li><a href="Resume.html">Resume</a></li>
     </ul>
 </section>
