Upadated README file and ListButton Dir

--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
+    <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button"></button>
+    <input type="text" name="list-data" id="list-data">
     <button id="add-to-list" type="button"></button>
+    <ul id="my-list"></ul>
 </body>
 
 </html>
