--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn about JavaScript</title>
-    <script src="index.js"></script>
     <script src="elf-code.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
     <input type="text" name="list-data" id="list-data">
-    <button id="set-text" type="button"></button>
-    <input type="text" name="list-data" id="list-data">
-    <button id="add-to-list" type="button"></button>
+    <button id="set-text" type="button">Set Text</button>
+    <button id="add-to-list" type="button">Add to list</button>
+    
     <ul id="my-list"></ul>
 </body>
 
