--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <h1>List button</h1>
+
     <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button">Set Text</button>
     <button id="add-to-list" type="button">Add to list</button>
