--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="Week03-day02.html">Week Three Day Two</a></li>
         <li><a href="Resume.html">Resume</a></li>
+        <li><a href="download-image.html"></a></li>
     </ul>
 </section>
 </html>
