--- a/Theme/index.html
+++ b/Theme/index.html
@@ -17,6 +17,8 @@
     
     <img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Datsun_240Z_-_Knebworth_Classic_Car_Show_2013_%289589949843%29.jpg" 
     alt="datsun 240" class="datsun240" height="300" width="400">
+
+    <img src="../images/utah-440520_640.jpg" alt="">
 </body>
 
 </html>
