--- a/download-image.html
+++ b/download-image.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <img src="images/utah-440520_640.jpg" alt="mountain sunset">
+
+    <img src="images/nismo_350z.jpg" alt="Nismo 350z">
 </body>
 </html>
