--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn about JavaScript</title>
+    <link ref="stylesheet" href="styles1.css">
     <script src="elf-code.js"></script>
     <script src="index.js"></script>
 </head>
