--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn about JavaScript</title>
-    <link ref="stylesheet" href="styles1.css">
+    <link ref="stylesheet" href="styles.css"/>
     <script src="elf-code.js"></script>
     <script src="index.js"></script>
 </head>
 
 <body>
-    <h1>List button</h1>
+    <h1>Button List</h1>
 
     <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button">Set Text</button>
