--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn about JavaScript</title>
-    <link ref="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css">
     <script src="elf-code.js"></script>
     <script src="index.js"></script>
 </head>
@@ -17,6 +17,8 @@
     <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button">Set Text</button>
     <button id="add-to-list" type="button">Add to list</button>
+    
+    <h1 class='center'>Center</h1>
     
     <ul id="my-list"></ul>
 </body>
