--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -12,13 +12,22 @@
 </head>
 
 <body>
-    <h1>Button List</h1>
+
+    <header>
+        <h1 class='center'>Button List</h1>
+        <p> Show how to Style Buttons and Respond to Button Clicks</p>
+    </header>
 
     <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button">Set Text</button>
     <button id="add-to-list" type="button">Add to list</button>
-    <h1 class=center>New point</h1>
     <ul id="my-list"></ul>
+
+    <h1 id='new-point'>New point I</h1>
+
+    <p>some text</p>
+
+    <h1 class='center'>New point II</h1>
 </body>
 
 </html>
