--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -14,20 +14,36 @@
 <body>
 
     <header>
-        <h1 class='center'>Button List</h1>
+        <h1>Button List</h1>
         <p> Show how to Style Buttons and Respond to Button Clicks</p>
+        <p class="byline">by Andrew Orcilla</p>
     </header>
 
-    <input type="text" name="list-data" id="list-data">
-    <button id="set-text" type="button">Set Text</button>
-    <button id="add-to-list" type="button">Add to list</button>
-    <ul id="my-list"></ul>
+    <main>
+        <h1>Clicking Buttons</h1>
+        <input type="text" name="list-data" id="list-data">
+        <button id="set-text" type="button">Set Text</button>
+        <button id="add-to-list" type="button">Add to list</button>
+        <ul id="my-list"></ul>
 
-    <h1 id='new-point'>New point I</h1>
+        <h1 id='new-point'>New point I</h1>
 
-    <p>some text</p>
+        <figure>
+                <img id="list-button-utah" src="../images/utah-440520_640.jpg" alt="Picture of Utah">
+        </figure>
 
-    <h1 class='center'>New point II</h1>
+        <p>some text</p>
+
+        <h1 class='center'>New point II</h1>
+    </main>
+    <footer>
+        <p>
+            &copy; Andrew Orcilla
+        </p>
+        <ul>
+            <li><a href="./about.html">about</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
