--- a/Theme/index.html
+++ b/Theme/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,51 @@
     <title>Theme Nissan Z</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1 class='title'>Nissan Z</h1>
+    <header>
+        <h1 class="title">Nissan Z</h1>
 
-    <p>The <strong>Nissan Z</strong> is a sports car that is manufactured by
-        Nissan Moters Ltd. This specific model has been in production since
-        1969 and has gone through six generations. 
-    </p>
-    
-    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Datsun_240Z_-_Knebworth_Classic_Car_Show_2013_%289589949843%29.jpg" 
-    alt="datsun 240" height="300" width="640">
+        <p> Information about one of Nissans sport cars</p>
 
-    <img src="../images/nismo_350z.jpg" alt="nismo 350z">
+        <p class="byline">by Andrew Orcilla</p>
+    </header>
+
+    <main>
+
+        <h1>Datsun 240z</h1>
+
+        <figure>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Datsun_240Z_-_Knebworth_Classic_Car_Show_2013_%289589949843%29.jpg"
+                alt="datsun 240" class="datsun" height="427" width="640">
+        </figure>
+
+        <p>
+            The 240z was a classic and a start to the Z generation. This was back when nissan was first classified as
+            "Datsun".
+        </p>
+
+        <h1>Nissan 350z</h1>
+
+        <figure>
+            <img src="../images/nismo_350z.jpg" alt="nismo 350z" class="nismo350">
+        </figure>
+
+        <p>
+            The 350z was another generation of the Z's produced from 2003-2008 it was the start of the VQ motor series.
+        </p>
+
+    </main>
+
+    <footer>
+
+        &copy; Andrew Orcilla
+        <ul>
+            <li><a href="about.html">about</a></li>
+            <li><a href="index.html">home</a></li>
+        </ul>
+
+    </footer>
 </body>
 
 </html>
