--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -19,20 +19,68 @@
         <p class="byline">by Andrew Orcilla</p>
     </header>
 
+    <nav>
+        <ul><a href="#clicking-buttons">Click Buttons</a></ul>
+        <ul><a href="#more-info">More Information</a></ul>
+    </nav>
+
     <main>
-        <h1>Clicking Buttons</h1>
-        <input type="text" name="list-data" id="list-data">
-        <button id="set-text" type="button">Set Text</button>
-        <button id="add-to-list" type="button">Add to list</button>
-        <ul id="my-list"></ul>
+        <section>
+            <h2>In class button box model</h2>
 
-        <h1 id='new-point'>New point I</h1>
+            <button class="test-button" type="button">Test Button</button>
 
-        <figure>
-                <img id="list-button-utah" src="../images/utah-440520_640.jpg" alt="Picture of Utah">
-        </figure>
+            <div id="margin-div">
+                <button class="margin-button" type="button">margin Button</button>
+            </div>
 
-        <p>some text</p>
+        </section>
+
+        <section>
+            <h1 id="clicking-buttons">Clicking Buttons</h1>
+            <input type="text" name="list-data" id="list-data">
+            <button id="set-text" type="button">Set Text</button>
+            <button id="add-to-list" type="button">Add to list</button>
+            <ul id="my-list"></ul>
+
+            <h1 id='new-point'>New point I</h1>
+
+
+            <img id="list-button-utah" src="../images/utah-440520_640.jpg" alt="Picture of Utah">
+
+
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.
+                The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+                as opposed to using 'Content here, content here', making it look like readable English. Many desktop
+                publishing packages
+                and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem
+                ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the
+                years, sometimes by
+                accident, sometimes on purpose (injected humour and the like).
+            </p>
+        </section>
+
+        <section>
+            <h1 id="more-info">More Information</h1>
+
+            <aside>This is my aside that i am writing in class on thursday near the end of the class</aside>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquet lacus id sapien consectetur, at
+                dapibus arcu ultricies.
+                Nulla ut lorem sed lectus accumsan tincidunt. Vestibulum a dapibus nulla, et pharetra quam. Integer
+                laoreet elit suscipit ipsum vestibulum malesuada.
+                Nulla non lorem blandit, imperdiet elit a, interdum sem. Fusce consequat nulla in dui tempor dignissim.
+                Nunc metus tellus, rutrum at tempor id, fermentum id dui.
+                Suspendisse placerat diam non hendrerit tristique. Aliquam vel lorem nulla. Proin molestie, augue nec
+                iaculis placerat, erat est sagittis tellus, at congue libero
+                neque a leo. Praesent dictum erat et massa accumsan dignissim. In ac neque sed nisi sollicitudin
+                consectetur sed nec purus. Maecenas sed auctor nunc. Mauris
+                aliquam dictum neque, eu fermentum lacus porttitor vitae. Proin elementum augue quam, a luctus enim
+                efficitur in. Orci varius natoque penatibus et magnis dis
+                parturient montes, nascetur ridiculus mus.
+            </p>
+        </section>
+
     </main>
     <footer>
         <p>
