--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -40,10 +40,16 @@
             <h1 id="clicking-buttons">Clicking Buttons</h1>
             <input type="text" name="list-data" id="list-data">
             <button id="set-text" type="button">Set Text</button>
-            <button id="add-to-list" type="button">Add to list</button>
-            <ul id="my-list"></ul>
+            <br>
+            <div class="elf-div-border"
+                <button id="add-to-list" type="button">Add to list</button>
+            </div>
+            <br>
+            <div class="list-div">
+                <ul id="my-list"></ul>
+            </div>
 
-            <h1 id='new-point'>New point I</h1>
+            <h1 id='new-point'>Information</h1>
 
 
             <img id="list-button-utah" src="../images/utah-440520_640.jpg" alt="Picture of Utah">
