--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="Resume.html">Resume</a></li>
         <li><a href="Theme/index.html">Theme</a></li>
         <li><a href="download-image.html">Image</a></li>
-        <li><a href="listbutton/index.html">Clicking Buttons</a></li>
+        <li><a href="Listbutton/index.html">Clicking Buttons</a></li>
     </ul>
 </section>
 </html>
