--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -41,8 +41,7 @@
             <input type="text" name="list-data" id="list-data">
             <button id="set-text" type="button">Set Text</button>
             <br>
-            <div class="elf-div-border"
-                <button id="add-to-list" type="button">Add to list</button>
+            <div class="elf-div-border" <button id="add-to-list" type="button">Add to list</button>
             </div>
             <br>
             <div class="list-div">
