the,e/indexl.html updated

--- a/Theme/index.html
+++ b/Theme/index.html
@@ -76,8 +76,7 @@
             </figure>
 
             <p>
-                The 370z is the latest generation of the Z's produced from 2009 to today,
-                also an upgraded engine fromt he previous gen.
+                The 370z is the latest generation of the Z's produced from 2009 to today.
             </p>
 
         </section>
