--- a/Theme/index.html
+++ b/Theme/index.html
@@ -76,7 +76,8 @@
             </figure>
 
             <p>
-                The 370z is the latest generation of the Z's produced from 2009 to today.
+                The 370z is the latest generation of the Z's produced from 2009 to today, with a slightly
+                upgraded moter.
             </p>
 
         </section>
