--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <section>
     <h1>Toc</h1>
 
-    <ul>
-        <li><a href="Week03-day02.html">Week Three Day Two</a></li>
-        <li><a href="Resume.html">Resume</a></li>
-        <li><a href="Theme/index.html">Theme</a></li>
-        <li><a href="download-image.html">Image</a></li>
-        <li><a href="ListButton/index.html">ListButton</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="Week03-day02.html">Week Three Day Two</a></li>
+            <li><a href="Resume.html">Resume</a></li>
+            <li><a href="Theme/index.html">Theme</a></li>
+            <li><a href="download-image.html">Image</a></li>
+            <li><a href="ListButton/index.html">ListButton</a></li>
+        </ul>
+    </nav>
 </section>
 </html>
