Updated DIR theme and javascript-tests

--- a/Theme/index.html
+++ b/Theme/index.html
@@ -41,6 +41,8 @@
                 The 240z was a classic and a start to the Z generation. This was back when nissan was first classified as
                 "Datsun".
             </p>
+
+            <a href="datsun240z/index.html">Click here for more information</a>
         </section>
 
         <section id="nissan300">
