--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="Theme/index.html">Theme</a></li>
             <li><a href="download-image.html">Image</a></li>
             <li><a href="ListButton/index.html">ListButton</a></li>
+            <li><a href="javascript-tests/week07-day01.html">Week07 Day01 in Class</a></li>
         </ul>
     </nav>
 </section>
