starting class on wednesday

--- a/Theme/datsun240z/index.html
+++ b/Theme/datsun240z/index.html
@@ -45,6 +45,12 @@
             <img src="../../images/L24.jpg" alt="L24 motor">
         </figure>
 
+        <p>The datsun Z was a big hit when it was imported to the US from Japan.</p>
+
+        <figure>
+            <img src="../../images/280ZX.jpg" alt="datsunZ advertisment">
+        </figure>
+
 
 
     </main>
