class on wednesday

--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn about JavaScript</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="elf-code.js"></script>
+    <script src="../lib/elf-code.js"></script>
     <script src="index.js"></script>
 </head>
 
