--- a/Theme/datsun240z/index.html
+++ b/Theme/datsun240z/index.html
@@ -48,7 +48,7 @@
         <p>The datsun Z was a big hit when it was imported to the US from Japan.</p>
 
         <figure>
-            <img src="../../images/280ZX.jpg" alt="datsunZ advertisment">
+            <img src="../../images/280ZX.jpg" alt="datsunZ advertisment" width="427" height="650">
         </figure>
 
 
