Updated theme dir with new dir (nissan300zx,nissan350z, and nissan370z)added img's in the images dir and modified theme/index.html and styles.css

--- a/Theme/about.html
+++ b/Theme/about.html
@@ -22,6 +22,12 @@
             Nissan Moters Ltd. This specific model has been in production since
             1969 and has gone through six generations. 
         </p>
+        <p>This Website is more educational purposes only. I describe the evolution in car generations that
+            the nissan model "z" goes throught the year.
+        </p>
+
+        <p>All information was used from Wikipedia and reworded plus added info by me (Andrew Orcilla)</p>
+
      
     </main>
 
