--- a/Theme/index.html
+++ b/Theme/index.html
@@ -42,10 +42,11 @@
                 "Datsun".
             </p>
 
-            <a href="datsun240z/index.html">Click here for more information</a>
+            <a href="datsun240z/index.html">Click here for more information about the 240z</a>
         </section>
 
         <section id="nissan300">
+            
             <h1>Nissan 300zx</h1>
             
             <figure>
@@ -55,6 +56,8 @@
             <p>
                 The 300zx itself had many changes and generations
             </p>
+
+            <a href="nissan300zx/index.html">Click here for more information about the 300zx</a>
 
         </section>
 
@@ -68,6 +71,8 @@
             <p>
                 The 350z was another generation of the Z's produced from 2003-2008 it was the start of the VQ motor series.
             </p>
+
+            <a href="nissan350z/index.html">Click here for more information about the 350z</a>
         </section>
 
         <section id="nissan370">
@@ -81,6 +86,8 @@
                 The 370z is the latest generation of the Z's produced from 2009 to today, with a slightly
                 upgraded moter.
             </p>
+
+            <a href="nissan370z/index.html">Click here for more information about the 370z</a>
 
         </section>
 
