--- a/Theme/datsun240z/index.html
+++ b/Theme/datsun240z/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <h1>Datsun 240z</h1>
+        <h1 class="title">Datsun 240z/280zx</h1>
 
-        <p>First generation of Z's</p>
+        <p>The Beginning of Z's</p>
 
         <p class="byline">by Andrew Orcilla</p>
     </header>
@@ -24,7 +24,7 @@
         <p>The 1970 240Z was introduced to the American market by <strong>Yutaka Katayama</strong>, president of Nissan
             Motors USA
             operations, widely known as "Mister K". The 1970 through the mid-1971 model year 240Z was referred to as
-            the Series I.
+            the Series I.<br>
             These early cars had many subtle but notable features differing from later cars. The most easily visible
             difference is that these early cars had a chrome 240Z badge on the sail pillar,
             and two horizontal vents in the rear hatch below the glass molding providing flow through ventilation. In
@@ -59,8 +59,8 @@
         &copy; Andrew Orcilla
         <nav>
             <ul>
-                <li><a href="about.html">about</a></li>
-                <li><a href="index.html">home</a></li>
+                <li><a href="../about.html">about</a></li>
+                <li><a href="../index.html">home</a></li>
             </ul>
         </nav>
     </footer>
