Modified theme dir and added images to the images dir

--- a/Theme/datsun240z/index.html
+++ b/Theme/datsun240z/index.html
@@ -21,9 +21,9 @@
     <main>
         <h1>Datsun 240z Information</h1>
 
-        <p>The 1970 240Z was introduced to the American market by <strong>Yutaka Katayama</strong>, president of Nissan
+        <p>The 1970 240Z was introduced to the American market by <strong>Yutaka Katayama</strong>, who is the president of Nissan
             Motors USA
-            operations, widely known as "Mister K". The 1970 through the mid-1971 model year 240Z was referred to as
+            operations, widely known as "<strong>Mister K</strong>". The 1970 through the mid-1971 model year 240Z was referred to as
             the Series I.<br>
             These early cars had many subtle but notable features differing from later cars. The most easily visible
             difference is that these early cars had a chrome 240Z badge on the sail pillar,
@@ -33,7 +33,7 @@
             vented emblem, and the vents were eliminated from the hatch panel of the car. Design changes for the US
             model 240Z occurred throughout production, including interior modifications for
             the 1972 model year, and a change in the location of the bumper over-riders, as well as the addition of
-            some emission control devices and the adoption of a new style of emissions reducing carburetors for the
+            some emission control devices and the release of a new style of emissions reducing carburetors for the
             1973 model year.</p>
 
         <h1>Motor Information</h1>
@@ -48,7 +48,7 @@
         <p>The datsun Z was a big hit when it was imported to the US from Japan.</p>
 
         <figure>
-            <img src="../../images/280ZX.jpg" alt="datsunZ advertisment" width="427" height="650">
+            <img src="../../images/280ZX.jpg" alt="datsunZ advertisment" width="480" height="420">
         </figure>
 
 
