--- a/Theme/nissan370z/index.html
+++ b/Theme/nissan370z/index.html
@@ -44,6 +44,25 @@
             <figcaption>Fig1. Nissan 370z VQ37HR motor</figcaption>
         </figure>
 
+        <h1>Body Style</h1>
+
+        <p>The 370z had a change of body styles more noticable in the <strong>Nismo</strong> trim.
+            Here are two examples, first of the earlier nismo models then the latest nismo model.</p>
+
+        <figure>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/2010_Nissan_370Z_NISMO.jpg/800px-2010_Nissan_370Z_NISMO.jpg"
+                alt="2010Nissan370z" height="427" width="650">
+            <figcaption>Fig1. First generation of the 370z nismo trim<br><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/2010_Nissan_370Z_NISMO.jpg/800px-2010_Nissan_370Z_NISMO.jpg"
+                    target="_blank">Image Source</a></figcaption>
+        </figure>
+
+        <figure>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Nissan_370Z_Nismo_%28MSP15%29.JPG/697px-Nissan_370Z_Nismo_%28MSP15%29.JPG"
+                alt="2015Nissan370z" height="427" width="650">
+            <figcaption>Fig2. Second generation of the 370z nismo trim<br><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Nissan_370Z_Nismo_%28MSP15%29.JPG/697px-Nissan_370Z_Nismo_%28MSP15%29.JPG"
+                    target="_blank">Image Source</a></figcaption>
+        </figure>
+
     </main>
 
     <footer>
