Theme Dir updated

--- a/Theme/datsun240z/index.html
+++ b/Theme/datsun240z/index.html
@@ -32,7 +32,7 @@
             in a circular
             vented emblem, and the vents were eliminated from the hatch panel of the car. Design changes for the US
             model 240Z occurred throughout production, including interior modifications for
-            the 1972 model year, and a change in the location of the bumper over-riders, as well as the addition of
+            the 1972 model year, and a change in the location of the bumper over-riders, and added
             some emission control devices and the release of a new style of emissions reducing carburetors for the
             1973 model year.</p>
 
@@ -43,12 +43,16 @@
 
         <figure>
             <img src="../../images/L24.jpg" alt="L24 motor">
+            <br>
+            <a href="http://zhome.com/History/LSeries/LSeriesR1.htm" target="_blank">Image Source</a>
         </figure>
 
         <p>The datsun Z was a big hit when it was imported to the US from Japan.</p>
 
         <figure>
             <img src="../../images/280ZX.jpg" alt="datsunZ advertisment" width="480" height="420">
+            <br>
+            <a href="https://www.pinterest.com/pin/93379392245446860/" target="_blank">Image Source</a>
         </figure>
 
 
