--- a/Theme/nissan300zx/index.html
+++ b/Theme/nissan300zx/index.html
@@ -65,6 +65,8 @@
 
         <figure>
             <img src="../../images/VG30ET.jpg" alt="VG30ET engine used in the 300ZX">
+            <br>
+            <a href="http://80motorsclub.foroactivo.com/t102-300zxz31" target="_blank">Image Source</a>
         </figure>
 
         <p>Here is the difference between the Z31 and Z32:</p>
@@ -72,6 +74,8 @@
         <figure>
             <img src="../../images/Z31.jpg" alt="Z31" width="650" height="427">
             <figcaption>Fig 1. nissan Z31</figcaption>
+            <br>
+            <a href="https://aminoapps.com/c/garage/page/item/nissan-300zx-z31/3WWt_DIwrL8dQ1RK2NmQ245WLnvqG7p" target="_blank">Image Source</a>
         </figure>
 
 
