--- a/Theme/nissan350z/index.html
+++ b/Theme/nissan350z/index.html
@@ -61,12 +61,16 @@
 
             <figure>
                 <img src="../../images/VQ35DE.jpg" alt="VQ35DE" height="427" width="650">
-                <figcaption>Fig1. VQ35DE motor (2003-2006)</figcaption>
+                <figcaption>Fig1. VQ35DE motor (2003-2006)<br> 
+                <a href="https://commons.wikimedia.org/wiki/File:NISSAN_VQ35DE_for_Z33_RS_CONCEPT.jpg" target="_blank">Image Source</a>
+                </figcaption>
             </figure>
 
             <figure>
                 <img src="../../images/VQ35HR.jpg" alt="VQ35HR" height="427" width="650">
-                <figcaption>Fig2. VQ35HR motor (2007-2008)</figcaption>
+                <figcaption>Fig2. VQ35HR motor (2007-2008)<br>
+                <a href="https://twitter.com/nipponautos/status/593771052574072832" target="_blank">Image Source</a>
+                </figcaption>
             </figure>
         </p>
 
