theme dir updated index.html updated nav bar

--- a/Theme/index.html
+++ b/Theme/index.html
@@ -24,6 +24,7 @@
             <li><a href="#nissan300">Nissan 300zx</a></li>
             <li><a href="#nissan350">Nissan 350z</a></li>
             <li><a href="#nissan370">Nissan 370z</a></li>
+            <li><a href="#extra">Future/Extras</a></li>
         </ul>
     </nav>
 
@@ -100,7 +101,7 @@
 
         </section>
 
-        <section>
+        <section id="extra">
             <h1>The Future of Nissan/My own Z</h1>
 
             <a href="nissannewz/index.html">Click here for more information</a>
