--- a/Theme/nissannewz/index.html
+++ b/Theme/nissannewz/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>The Future of the Z</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="title">The Future of Z's</h1>
@@ -19,35 +21,44 @@
         <h1>Rumors and Concepts</h1>
 
         <p>At the beginning September 2018 rumors have been spreading that there will be a new Nissan Z in production.
-            Many are predicting they will reveal the new generation at the Tokyo Motor Show which is scheduled to happen
-            October 2019. Apperently the play is to team up with <strong>Mercedes</strong> and bring in a new concept to how
-            the engine is built. It will replace the original 3.7 V6 with 4 cylinder engine that will possibly have two sets of
+            Many are predicting they will reveal the new generation at the Tokyo Motor Show which is scheduled to
+            happen
+            October 2019. Apperently the play is to team up with <strong>Mercedes</strong> and bring in a new concept
+            to how
+            the engine is built. It will replace the original 3.7 V6 with 4 cylinder engine that will possibly have two
+            sets of
             turbos.
         </p>
 
         <h1>Modifications and Custom work</h1>
 
         <p>
-            Many individuals who own a Z often times modify their car. Whether it's for style or performance each one has
-            a unique sense of taste towards the owner. I myself have owned a 2008 350z and I can say it was an experience to have.
-            The interior feels like a rocketship with every display turned towards the driver geared to give that experience where 
+            Many individuals who own a Z often times modify their car. Whether it's for style or performance each one
+            has
+            a unique sense of taste towards the owner. I myself have owned a 2008 350z and I can say it was an
+            experience to have.
+            The interior feels like a rocketship with every display turned towards the driver geared to give that
+            experience where
             you have a personal connection and control of the car.<br><br>
-            Even though it sounds like a close to perfect car everything has its flaws. The Z's are know to have a lot of road noise when
-            when taking it for a drive. Also the interior material is made out of a cheap plastic that scratches easily. Most Z's that you find
+            Even though it sounds like a close to perfect car everything has its flaws. The Z's are know to have a lot
+            of road noise when
+            when taking it for a drive. Also the interior material is made out of a cheap plastic that scratches
+            easily. Most Z's that you find
             "used" will most likely have interior mark ups.<br><br>
             Here is a photot of my Z before I had to sadly say goodbye to it.</p>
-        
+
         <img src="../../images/my350z.jpg" alt="My 2008 350z" height="450" width="850">
     </main>
-    
+
     <footer>
-            &copy; Andrew Orcilla
-            <nav>
-                <ul>
-                    <li><a href="../about.html">about</a></li>
-                    <li><a href="../index.html">home</a></li>
-                </ul>
-            </nav>
+        &copy; Andrew Orcilla
+        <nav>
+            <ul>
+                <li><a href="../about.html">about</a></li>
+                <li><a href="../index.html">home</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
+
 </html>
