theme dir several updates and for final draft

--- a/Theme/about.html
+++ b/Theme/about.html
@@ -30,9 +30,13 @@
             <br><br>
             All information was sourced from Wikipedia and added info by me (Andrew Orcilla)</p>
 
-        <h1>My Interest on the Topic</h1>
+        <h1>About me</h1>
 
-        <p>I started growing an interest in cars when i saw my first <strong>Nissan GTR</strong>. The first thing that
+        <figure>
+            <img src="../images/profilePic-1.jpg" alt="Andrew O profile" height="150" width="150">
+        </figure>
+
+        <p> My name is <strong>Andrew Orcilla</strong>, I started growing an interest in cars when i saw my first <strong>Nissan GTR</strong>. The first thing that
             came to my mind
             is that it was such a cool looking car so I did my research. Finding out that the car cost $60,000 and more
             I went to look
