--- a/Theme/nissan300zx/index.html
+++ b/Theme/nissan300zx/index.html
@@ -19,6 +19,14 @@
 
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../datsun240z/index.html">Previous car 240zx</a></li>
+            <li><a href="../nissan350z/index.html">Next car 350z</a></li>
+        </ul>
+    </nav>
+
     <main>
         <h1>Nissan 300zx Information</h1>
 
@@ -42,8 +50,9 @@
             more accessible, and ultimately the more popular model, selling over 100,000 more units in total than the
             Z32. In 1983-1984 the Nissan 300ZX Turbo brand new priced around $12,000-$18,000<br><br>
 
+            <aside>The 300zx is now a very rare car to spot to this day</aside>
             Car and Driver placed the Z32 on its Ten Best list for 7 consecutive years, each model year of its
-            availability in the United States. Motor Trend awarded it as the 1990 Import Car of the Year.[2] The Nissan
+            availability in the United States. Motor Trend awarded it as the 1990 Import Car of the Year. The Nissan
             350Z, officially the Z33 generation Z-Car, succeeded the 300ZX in 2003.<br>
         </p>
 
@@ -72,15 +81,16 @@
         <p>Here is the difference between the Z31 and Z32:</p>
 
         <figure>
-            <img src="../../images/Z31.jpg" alt="Z31" width="650" height="427">
+            <img src="../../images/Z31.jpg" alt="Z31" width="350" height="250">
             <figcaption>Fig 1. nissan Z31</figcaption>
             <br>
-            <a href="https://aminoapps.com/c/garage/page/item/nissan-300zx-z31/3WWt_DIwrL8dQ1RK2NmQ245WLnvqG7p" target="_blank">Image Source</a>
+            <a href="https://aminoapps.com/c/garage/page/item/nissan-300zx-z31/3WWt_DIwrL8dQ1RK2NmQ245WLnvqG7p" target="_blank">Image
+                Source</a>
         </figure>
 
 
         <figure>
-            <img src="../../images/Z32.jpg" alt="Z32" width="650" height="427">
+            <img src="../../images/Z32.jpg" alt="Z32" width="350" height="250">
             <figcaption>Fig 2. nissan Z32</figcaption>
         </figure>
 
