--- a/Theme/nissannewz/index.html
+++ b/Theme/nissannewz/index.html
@@ -17,6 +17,13 @@
 
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../nissan370z/index.html">Previous car 370z</a></li>
+        </ul>
+    </nav>
+
     <main>
         <h1>Rumors and Concepts</h1>
 
@@ -47,7 +54,7 @@
             "used" will most likely have interior mark ups.<br><br>
             Here is a photot of my Z before I had to sadly say goodbye to it.</p>
 
-        <img src="../../images/my350z.jpg" alt="My 2008 350z" height="450" width="850">
+        <img src="../../images/my350z.jpg" alt="My 2008 350z" height="250" width="350">
     </main>
 
     <footer>
