--- a/Theme/datsun240z/index.html
+++ b/Theme/datsun240z/index.html
@@ -18,12 +18,29 @@
         <p class="byline">by Andrew Orcilla</p>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../nissan300zx/index.html">Next car 300zx</a></li>
+        </ul>
+    </nav>
+
     <main>
         <h1>Datsun 240z Information</h1>
 
-        <p>The 1970 240Z was introduced to the American market by <strong>Yutaka Katayama</strong>, who is the president of Nissan
+        <figure id="floats">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Datsun_240Z_%282%29.jpg/800px-Datsun_240Z_%282%29.jpg"
+                alt="datsun 240z logo" width="100" height="100">
+            <figcaption>Datsun 240z logo
+                <a href="https://commons.wikimedia.org/wiki/File:Datsun_240Z_(2).jpg">image source</a>
+            </figcaption>
+        </figure>
+
+        <p>The 1970 240Z was introduced to the American market by <strong>Yutaka Katayama</strong>, who is the
+            president of Nissan
             Motors USA
-            operations, widely known as "<strong>Mister K</strong>". The 1970 through the mid-1971 model year 240Z was referred to as
+            operations, widely known as "<strong>Mister K</strong>". The 1970 through the mid-1971 model year 240Z was
+            referred to as
             the Series I.<br>
             These early cars had many subtle but notable features differing from later cars. The most easily visible
             difference is that these early cars had a chrome 240Z badge on the sail pillar,
@@ -42,7 +59,7 @@
             this gave it a maximum hoursepower of 151 @ 5600rpm</p>
 
         <figure>
-            <img src="../../images/L24.jpg" alt="L24 motor">
+            <img src="../../images/L24.jpg" alt="L24 motor" width="350">
             <br>
             <a href="http://zhome.com/History/LSeries/LSeriesR1.htm" target="_blank">Image Source</a>
         </figure>
@@ -50,7 +67,7 @@
         <p>The datsun Z was a big hit when it was imported to the US from Japan.</p>
 
         <figure>
-            <img src="../../images/280ZX.jpg" alt="datsunZ advertisment" width="480" height="420">
+            <img src="../../images/280ZX.jpg" alt="datsunZ advertisment" width="250" height="350">
             <br>
             <a href="https://www.pinterest.com/pin/93379392245446860/" target="_blank">Image Source</a>
         </figure>
