--- a/Theme/index.html
+++ b/Theme/index.html
@@ -34,7 +34,7 @@
             <h1>Datsun 240z</h1>
 
 
-            <img src="../images/240z.jpg" alt="datsun 240" height="320" width="480">
+            <img src="../images/240z.jpg" alt="datsun 240" height="250" width="350">
             <br>
             <a href="https://www.pinterest.com/pin/329677635199621223" target="_blank">Image Source</a>
 
@@ -52,9 +52,10 @@
             <h1>Nissan 300zx</h1>
 
 
-            <img src="../images/1990-1996-Nissan-300ZX.jpg" alt="300zx" height="320" width="480">
+            <img src="../images/1990-1996-Nissan-300ZX.jpg" alt="300zx" height="250" width="350">
             <br>
-            <a href="https://www.nissan-global.com/EN/HERITAGE/nissan_300ZX_twin_turbo.html" target="_blank">Image Source</a>
+            <a href="https://www.nissan-global.com/EN/HERITAGE/nissan_300ZX_twin_turbo.html" target="_blank">Image
+                Source</a>
 
 
             <p>
@@ -69,10 +70,12 @@
             <h1>Nissan 350z</h1>
 
 
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/Nissan_Fairlady_Z_Version_NISMO_%28Z33%29_front.JPG" alt="nismo 350z" height="320" width="480">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/Nissan_Fairlady_Z_Version_NISMO_%28Z33%29_front.JPG"
+                alt="nismo 350z" height="250" width="350">
             <br>
-            <a href="https://commons.wikimedia.org/wiki/File:Nissan_Fairlady_Z_Version_NISMO_(Z33)_front.JPG" target="_blank">Image source</a>
-            
+            <a href="https://commons.wikimedia.org/wiki/File:Nissan_Fairlady_Z_Version_NISMO_(Z33)_front.JPG" target="_blank">Image
+                source</a>
+
 
 
             <p>
@@ -87,7 +90,8 @@
             <h1>Nissan 370z</h1>
 
 
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4d/Nissan_370Z_%285494564740%29.jpg" alt="nismo 370z" height="320" width="480">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4d/Nissan_370Z_%285494564740%29.jpg" alt="nismo 370z"
+                height="250" width="350">
             <br>
             <a href="https://commons.wikimedia.org/wiki/File:Nissan_370Z_(5494564740).jpg" target="_blank">Image source</a>
 
