--- a/Theme/nissan350z/index.html
+++ b/Theme/nissan350z/index.html
@@ -19,8 +19,24 @@
 
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../nissan300zx/index.html">Previous car 300zx</a></li>
+            <li><a href="../nissan370z/index.html">Next car 370z</a></li>
+        </ul>
+    </nav>
+
     <main>
         <h1>Nissan 350z information</h1>
+
+        <figure id="floats">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Nissan_350Z_rear_20081206.jpg/800px-Nissan_350Z_rear_20081206.jpg"
+                alt="convertible 350z" height="150" width="250">
+            <figcaption>convertible 350z
+                <a href="https://commons.wikimedia.org/wiki/File:Nissan_350Z_rear_20081206.jpg">Image source</a>
+            </figcaption>
+        </figure>
 
         <p>
             The <strong>Nissan 350Z</strong> (known as <strong>Nissan Fairlady Z</strong> in Japan) is a two-door,
@@ -40,7 +56,7 @@
         <p>
             The Nissan 350z had three types of engines throught the years of release.
 
-            <ul>
+            <ol>
                 <li>2003-2005: VQ35DE 3.5 L (210 cu in) V6
                     276 hp (206 kW; 280 PS) at 6,200 rpm
                     274 lb⋅ft (371 N⋅m) at 4,800 rpm</li>
@@ -50,7 +66,7 @@
                 <li>2007-2008: VQ35HR 3.5 L (210 cu in) V6
                     306 hp (228 kW; 310 PS) at 6,800 rpm
                     268 lb⋅ft (363 N⋅m) at 4,800 rpm</li>
-            </ul>
+            </ol>
 
             The difference between the 03-05 and the 06 VQ35DE is that the 06 is producing
             more horsepower and torque at a higher rpm, 300hp at 6,400rpm vs 276hp at 6,200rpm.
@@ -60,16 +76,17 @@
             ongoing problems the previous years had such as, oil consumption problems.
 
             <figure>
-                <img src="../../images/VQ35DE.jpg" alt="VQ35DE" height="427" width="650">
-                <figcaption>Fig1. VQ35DE motor (2003-2006)<br> 
-                <a href="https://commons.wikimedia.org/wiki/File:NISSAN_VQ35DE_for_Z33_RS_CONCEPT.jpg" target="_blank">Image Source</a>
+                <img src="../../images/VQ35DE.jpg" alt="VQ35DE" height="250" width="350">
+                <figcaption>Fig1. VQ35DE motor (2003-2006)<br>
+                    <a href="https://commons.wikimedia.org/wiki/File:NISSAN_VQ35DE_for_Z33_RS_CONCEPT.jpg" target="_blank">Image
+                        Source</a>
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="../../images/VQ35HR.jpg" alt="VQ35HR" height="427" width="650">
+                <img src="../../images/VQ35HR.jpg" alt="VQ35HR" height="250" width="350">
                 <figcaption>Fig2. VQ35HR motor (2007-2008)<br>
-                <a href="https://twitter.com/nipponautos/status/593771052574072832" target="_blank">Image Source</a>
+                    <a href="https://twitter.com/nipponautos/status/593771052574072832" target="_blank">Image Source</a>
                 </figcaption>
             </figure>
         </p>
