--- a/Theme/nissan370z/index.html
+++ b/Theme/nissan370z/index.html
@@ -19,8 +19,23 @@
 
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../nissan350z/index.html">Previous car 350z</a></li>
+            <li><a href="../nissannewz/index.html">Future Z and modifications</a></li>
+        </ul>
+    </nav>
+
     <main>
         <h1>Nissan 370z Information</h1>
+
+        <figure id="floats">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Nissan_370Z_Cockpit.jpg/800px-Nissan_370Z_Cockpit.jpg"
+                alt="370z interior" height="150" width="200">
+            <figcaption>370z cockpit <a href="https://commons.wikimedia.org/wiki/File:Nissan_370Z_Cockpit.jpg">Image
+                    source</a> </figcaption>
+        </figure>
 
         <p>
             The Nissan 370Z (known as the Fairlady Z Z34 in Japan) is a 2-door, 2-seater sports car (S-segment in
@@ -40,9 +55,10 @@
             350 horsepower at 7,400rpm. </p>
 
         <figure>
-            <img src="../../images/VQ37HR.jpg" alt="VQ37HR" height="427" width="650">
+            <img src="../../images/VQ37HR.jpg" alt="VQ37HR" height="250" width="350">
             <figcaption>Fig1. Nissan 370z VQ37HR motor<br>
-            <a href="https://www.topspeed.com/cars/nissan/2015-2017-nissan-370z-nismo-ar163602.html" target="_blank">Image Source</a>
+                <a href="https://www.topspeed.com/cars/nissan/2015-2017-nissan-370z-nismo-ar163602.html" target="_blank">Image
+                    Source</a>
             </figcaption>
         </figure>
 
@@ -53,18 +69,20 @@
 
         <figure>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/2010_Nissan_370Z_NISMO.jpg/800px-2010_Nissan_370Z_NISMO.jpg"
-                alt="2010Nissan370z" height="427" width="650">
+                alt="2010Nissan370z" height="250" width="350">
             <figcaption>Fig1. First generation of the 370z nismo trim<br>
-            <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/2010_Nissan_370Z_NISMO.jpg/800px-2010_Nissan_370Z_NISMO.jpg" target="_blank">Image Source</a>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/2010_Nissan_370Z_NISMO.jpg/800px-2010_Nissan_370Z_NISMO.jpg"
+                    target="_blank">Image Source</a>
             </figcaption>
-            
+
         </figure>
 
         <figure>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Nissan_370Z_Nismo_%28MSP15%29.JPG/697px-Nissan_370Z_Nismo_%28MSP15%29.JPG"
-                alt="2015Nissan370z" height="427" width="650">
+                alt="2015Nissan370z" height="250" width="350">
             <figcaption>Fig2. Second generation of the 370z nismo trim<br>
-            <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Nissan_370Z_Nismo_%28MSP15%29.JPG/697px-Nissan_370Z_Nismo_%28MSP15%29.JPG" target="_blank">Image Source</a>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Nissan_370Z_Nismo_%28MSP15%29.JPG/697px-Nissan_370Z_Nismo_%28MSP15%29.JPG"
+                    target="_blank">Image Source</a>
             </figcaption>
         </figure>
 
