--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="Week03-day02.html">Week Three Day Two</a></li>
             <li><a href="Resume.html">Resume</a></li>
-            <li><a href="Theme/index.html">Theme</a></li>
+            <li><a href="theme/index.html">Theme</a></li>
             <li><a href="download-image.html">Image</a></li>
             <li><a href="ListButton/index.html">ListButton</a></li>
             <li><a href="javascript-tests/week07-day01.html">Week07 Day01 in Class</a></li>
