--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="download-image.html">Image</a></li>
             <li><a href="ListButton/index.html">ListButton</a></li>
             <li><a href="javascript-tests/week07-day01.html">Week07 Day01 in Class</a></li>
+            <li><a href="javascript-tests/week07-day02.html">Week07 Day02 in class</a></li>
             <li><a href="for-loops/index.html">For Loops</a></li>
         </ul>
     </nav>
