--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <section>
-    <h1>Toc</h1>
+    <h1>Index</h1>
 
     <nav>
         <ul>
@@ -20,6 +20,7 @@
             <li><a href="javascript-tests/week07-day01.html">Week07 Day01 in Class</a></li>
             <li><a href="javascript-tests/week07-day02.html">Week07 Day02 in class</a></li>
             <li><a href="for-loops/index.html">For Loops</a></li>
+            <li><a href="javascript-tests/function-basics.html">Function Basics</a></li>
         </ul>
     </nav>
 </section>
