--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,19 @@
     <title>Function Basics</title>
     <script src="function-basics.js"></script>
 </head>
+
 <body>
     <h1>Function Basics</h1>
 
     <p id="simple-function"></p>
-    
     <p id="funtion-parameters"></p>
-
     <p id="function-return"></p>
+    <p id="show-user-input"></p>
+
+    <input type="text" name="user-input" id="user-input">
+
+    <button id="function-calls" type="button">Call Functions</button>
+    <button id="call-user-input" type="button">Call User Input</button>
 </body>
+
 </html>
