added useful-links.html and new file week08-javascriptobjects/work.js

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Week02 Day01</title>
+    <title>TOC</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <section>
-    <h1>Index</h1>
+    <header>
+        <h1>Index</h1>
+
+    </header>
 
     <nav>
         <ul>
@@ -21,7 +24,16 @@
             <li><a href="javascript-tests/week07-day02.html">Week07 Day02 in class</a></li>
             <li><a href="for-loops/index.html">For Loops</a></li>
             <li><a href="javascript-tests/function-basics.html">Function Basics</a></li>
+            <li><a href="useful-links.html">Useful Links</a></li>
         </ul>
     </nav>
+
+    <main>
+        <h1>Prog 109</h1>
+        <p>This page contains links for classwork and projects towards the class Prog 109</p>
+    </main>
+    <footer>
+        &copy; Andrew Orcilla
+    </footer>
 </section>
 </html>
