--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="javascript-tests/week07-day02.html">Week07 Day02 in class</a></li>
             <li><a href="for-loops/index.html">For Loops</a></li>
             <li><a href="javascript-tests/function-basics.html">Function Basics</a></li>
+            <li><a href="javascript-tests/function-input.html">Function Input</a></li>
             <li><a href="useful-links.html">Useful Links</a></li>
         </ul>
     </nav>
