--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="for-loops/index.html">For Loops</a></li>
             <li><a href="javascript-tests/function-basics.html">Function Basics</a></li>
             <li><a href="javascript-tests/function-input.html">Function Input</a></li>
+            <li><a href="javascript-tests/week08-javascriptobjects/work.js">JavaScript Objects</a></li>
             <li><a href="useful-links.html">Useful Links</a></li>
         </ul>
     </nav>
