modified object-choices.html and js

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="javascript-tests/function-input.html">Function Input</a></li>
             <li><a href="javascript-tests/week08-javascriptobjects/work.js">JavaScript Objects</a></li>
             <li><a href="useful-links.html">Useful Links</a></li>
+            <li><a href="javascript-tests/object-choices.html">Object Choices</a></li>
         </ul>
     </nav>
 
