--- a/javascript-tests/object-choices.html
+++ b/javascript-tests/object-choices.html
@@ -10,19 +10,12 @@
 </head>
 <body>
     <h1>Object Choices</h1>
-
-    <p>The simple function button calls the simpleobject object literal with a method of sayName that prints out 'simple object'
-        <br>
-        The function button calls the private function however only shows in consle
-        <br>
-        The custom class button class the Customclass with the class constructor printing out custom class.
-    </p>
-
-    <p>Simple Object: <span id='simple-object-display'></span></p>
-
-    <p>Function Object: <span id='function-object-display'></span></p>
-
-    <p>Custom Class: <span id='custom-class-display'></span></p>
+    <h1>Simple Object</h1>
+    <p>The simple function button calls the simpleobject object literal with a method of sayName that prints out 'simple object'.:<br><span id='simple-object-display'></span></p>
+    <h1>Function object:</h1>
+    <p>The function button calls the private function however only shows in console.:<br><span id='function-object-display'></span></p>
+    <h1>Custom Class</h1>
+    <p>The custom class button class the Customclass with the class constructor printing out custom class.:<br><span id='custom-class-display'></span></p>
 
     <button type="button" id="simple-object-action" >Call Simple Object</button>
 
