week 10 in class work

--- a/javascript-tests/object-choices.html
+++ b/javascript-tests/object-choices.html
@@ -11,11 +11,11 @@
 <body>
     <h1>Object Choices</h1>
     <h1>Simple Object</h1>
-    <p>The simple function button calls the simpleobject object literal with a method of sayName that prints out 'simple object'.:<br><span id='simple-object-display'></span></p>
+    <p>The simple function button calls the simpleobject object literal with a method of sayName that prints out 'simple object'.<br>Output:<span id='simple-object-display'></span></p>
     <h1>Function object:</h1>
-    <p>The function button calls the private function however only shows in console.:<br><span id='function-object-display'></span></p>
+    <p>The function button calls the private function however only shows in console.<br>Output:<span id='function-object-display'></span></p>
     <h1>Custom Class</h1>
-    <p>The custom class button class the Customclass with the class constructor printing out custom class.:<br><span id='custom-class-display'></span></p>
+    <p>The custom class button class the Customclass with the class constructor printing out custom class.<br>Output:<span id='custom-class-display'></span></p>
 
     <button type="button" id="simple-object-action" >Call Simple Object</button>
 
