completed javascript arrays updated both html and js

--- a/javascript-tests/javascript-arrays.html
+++ b/javascript-tests/javascript-arrays.html
@@ -8,7 +8,28 @@
     <script src="javascript-arrays.js"></script>
 </head>
 <body>
+<header>
+    <h1>JavaScript Arrays</h1>
+    <h2>Learn Javascript Arrays</h2>
+</header>
 
+<main>
+    <section>
+        <h2>Numbers</h2>
+        <ul id='numbers-display'></ul>
+        <button type='button' id='numbers-action'>Show Numbers</button>
+    </section>
+    <section>
+        <h2>Language Names</h2>
+        <ul id='language-names-display'></ul>
+        <button type='button' id="language-name-action">Language Names</button>
+    </section>
+    <section>
+        <h2>Language Popularity</h2>
+        <ul id='language-popularity-display'></ul>
+        <button type='button' id='language-popularity-action'>Language Popularity</button>
+    </section>
+</main>
     
 </body>
 </html>
