--- a/javascript-tests/javascript-arrays.html
+++ b/javascript-tests/javascript-arrays.html
@@ -6,30 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>javascript Arrays</title>
     <script src="javascript-arrays.js"></script>
+    <link rel="stylesheet" href="javascript-arrays.css">
 </head>
 <body>
 <header>
     <h1>JavaScript Arrays</h1>
     <h2>Learn Javascript Arrays</h2>
 </header>
-
+<br>
 <main>
     <section>
         <h2>Numbers</h2>
         <ul id='numbers-display'></ul>
         <button type='button' id='numbers-action'>Show Numbers</button>
     </section>
+    <hr>
     <section>
         <h2>Language Names</h2>
         <ul id='language-names-display'></ul>
         <button type='button' id="language-name-action">Language Names</button>
     </section>
+    <hr>
     <section>
         <h2>Language Popularity</h2>
         <ul id='language-popularity-display'></ul>
         <button type='button' id='language-popularity-action'>Language Popularity</button>
     </section>
 </main>
+<br>
+<footer>
+    <ul>
+        <li>&copy;</li>
+        <li>Andrew Orcilla</li>
+    </ul>
+</footer>
     
 </body>
 </html>
