added 'arrays' to index.html list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="javascript-tests/week08-javascriptobjects/work.js">JavaScript Objects</a></li>
             <li><a href="useful-links.html">Useful Links</a></li>
             <li><a href="javascript-tests/object-choices.html">Object Choices</a></li>
+            <li><a href="javascript-tests/javascript-arrays.html">Arrays</a></li>
         </ul>
     </nav>
 
