radio choices added html, js, and css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TOC</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link href="css/basic.css" rel="stylesheet" type="text/css" id="default">
+    <link href="css/styles.css" rel="alternate stylesheet" type="text/css" id="basic">
+    <script src="css-swap.js"></script>
 </head>
+
+<body>
+
 <section>
     <header>
         <h1>Index</h1>
@@ -35,9 +41,14 @@
     <main>
         <h1>Prog 109</h1>
         <p>This page contains links for classwork and projects towards the class Prog 109</p>
+        
+        <button type="button" id="appearanceAction">Change Appearance</button>
+    
     </main>
     <footer>
         &copy; Andrew Orcilla
     </footer>
 </section>
+
+</body>
 </html>
