--- a/for-loops/index.html
+++ b/for-loops/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn about for-loops</title>
     <link rel="stylesheet" href="../ListButton/styles.css">
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <script src="../lib/elf-code.js"></script>
     <script src="index.js"></script>
 </head>
