updated completed radio choices css,js, and html - Added radio choices to index .html as link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href="useful-links.html">Useful Links</a></li>
             <li><a href="javascript-tests/object-choices.html">Object Choices</a></li>
             <li><a href="javascript-tests/javascript-arrays.html">Arrays</a></li>
+            <li><a href="javascript-tests/raido-choices.html">Radio Choices</a></li>
         </ul>
     </nav>
 
