--- a/javascript-tests/raido-choices.html
+++ b/javascript-tests/raido-choices.html
@@ -28,6 +28,15 @@
                     
                         <input type="radio" id="green" name="sorter" value="Green">
                         <label for="green">Green</label>
+
+                        <input type="radio" id="yellow" name="sorter" value="Yellow">
+                        <label for="yellow">Yellow</label>
+
+                        <input type="radio" id="red" name="sorter" value="Red">
+                        <label for="red">Red</label>
+
+                        <input type="radio" id="purple" name="sorter" value="Purple">
+                        <label for="purple">Purple</label>
                         <div>
                         <input class="btn-padding" type="submit" value="Submit">
                         </div>
