Updated Theme page, mobie friendly. also updated css of radio-choices.css

--- a/theme/nissan350z/index.html
+++ b/theme/nissan350z/index.html
@@ -30,13 +30,13 @@
     <main>
         <h1>Nissan 350z information</h1>
 
-        <figure id="floats">
+        <div id="floats">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Nissan_350Z_rear_20081206.jpg/800px-Nissan_350Z_rear_20081206.jpg"
                 alt="convertible 350z" height="150" width="250">
             <figcaption>convertible 350z
                 <a href="https://commons.wikimedia.org/wiki/File:Nissan_350Z_rear_20081206.jpg">Image source</a>
             </figcaption>
-        </figure>
+        </div>
 
         <p>
             The <strong>Nissan 350Z</strong> (known as <strong>Nissan Fairlady Z</strong> in Japan) is a two-door,
