--- a/theme/nissan370z/index.html
+++ b/theme/nissan370z/index.html
@@ -30,12 +30,12 @@
     <main>
         <h1>Nissan 370z Information</h1>
 
-        <figure id="floats">
+        <div id="floats">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Nissan_370Z_Cockpit.jpg/800px-Nissan_370Z_Cockpit.jpg"
                 alt="370z interior" height="150" width="200">
             <figcaption>370z cockpit <a href="https://commons.wikimedia.org/wiki/File:Nissan_370Z_Cockpit.jpg">Image
                     source</a> </figcaption>
-        </figure>
+            </div>
 
         <p>
             The Nissan 370Z (known as the Fairlady Z Z34 in Japan) is a 2-door, 2-seater sports car (S-segment in
