--- a/javascript-tests/raido-choices.html
+++ b/javascript-tests/raido-choices.html
@@ -47,7 +47,7 @@
     <footer>
         <ul>
             <li>
-                &copy;
+                &copy; Andrew Orcilla
             </li>
             <li>
                 <a href="/index.html">Home</a>
