--- a/theme/nissannewz/index.html
+++ b/theme/nissannewz/index.html
@@ -54,7 +54,7 @@
             "used" will most likely have interior mark ups.<br><br>
             Here is a photot of my Z before I had to sadly say goodbye to it.</p>
 
-        <img src="../../images/my350z.jpg" alt="My 2008 350z" height="250" width="350">
+        <img src="../../images/my350z.jpg" id='front' alt="My 2008 350z" height="250" width="350">
     </main>
 
     <footer>
